# rust-exchange-rate-api

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: arguments.rs  lib.rs  main.rs  request_handler.rs
src/arguments/: mod.rs
src/models/: mod.rs
src/request_handler/: api_request.rs  conversion_rates.rs  mod.rs  standard_request.rs  supported_codes.rs
tests/: negative_integration_tests.rs
